Style changes (fix entry alignment on tree views)

--- a/views/resources/styles/backoffice.css
+++ b/views/resources/styles/backoffice.css
@@ -819,7 +819,7 @@ html, body {
 -----------------------------------------------------------------------------*/
 
 .BackOfficeLayout .TreeContentView .expander {
-    margin-right: 0.3em;
+    margin-left: -0.1em;
 }
 
 .BackOfficeLayout .TreeContentView .expander img {
